changed some text

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -94,7 +94,7 @@ Scroll back to Top Button
         <div class="border-bottom border-dark hero">
             <div class="col-3 align-self-center ps-5 name">
                 <h1 class="text-uppercase"> Silia Cronauer</h1>
-                <p>Indipendent Web Developer</p>
+                <p>Junior Fullstack Developer</p>
 
 
             </div>
@@ -118,8 +118,8 @@ Scroll back to Top Button
                 <div class="col-lg-7 align-self-end text-end mb-lg-5 p-5">
                     <p class="thin-heading"> About me</p>
                     <h3 class="mb-4">Hey I'm Silia!</h3>
-                    <p>I'm a sociologist and web developer. As a Web developer you have to constantly learn and I'm passionate about solving problems while building websites. I have acquired the skills and knowledge necessary to make your project a success.
-                        I enjoy every step of the design process, from discussion and collaboration.</p>
+                    <p>I'm a sociologist and web developer. As a Web developer you have to constantly learn and I'm passionate about solving problems while building websites. Excited to grow my skills I have acquired the skills and knowledge necessary to
+                        make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
                     <!--CV needs to be added!!-->
                     <a href="" class="text-uppercase text-dark" download>Download CV</a>
                 </div>
