added more technologies

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -137,7 +137,7 @@ Scroll back to Top Button
                     <div class="col px-4">
                         <h2 class="number">01</h2>
                         <h3>Web Design</h3>
-                        <p>The Design of a Website is a reclection of your buisness in the world wide web.</p>
+                        <p>The Design of a Website is a reflection of your buisness in the world wide web.</p>
                     </div>
                     <div class="col px-4">
                         <h2 class="number">02</h2>
@@ -199,6 +199,12 @@ Image Section
             </div>
             <div class="text-center"><i class="fa-brands fa-angular fs-2"></i>
                 <p>Angular</p>
+            </div>
+            <div class="text-center"><i class="fa-brands fa-php fs-2"></i>
+                <p>PHP</p>
+            </div>
+            <div class="text-center"><i class="fa-brands fa-symfony fs-2"></i>
+                <p>Symfony</p>
             </div>
         </div>
 
