--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,25 +38,25 @@ Home,  Skills, Projects, Contact
                 </div>
                 <!--Nav-Items-->
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <div class="">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#skills">Skills</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#projects">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#projects">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
@@ -79,24 +79,11 @@ Scroll back to Top Button
     Hero 
 ---------------    
 -->
-        <!--  <div class="d-flex border-bottom border-dark justify-content-between hero">
-            <div class="col-3 align-self-center ps-5 name">
-                <h1 class="text-uppercase"> Silia Cronauer</h1>
-                <p>Indipendent Web Developer</p>
-
-
-            </div>
-            <div class="hero-image col-8 border border-dark border-top-0 border-bottom-0">
-                <img src="../images/IMG_2415.jpg">
-            </div>
-        </div>-->
 
         <div class="border-bottom border-dark hero">
             <div class="col-3 align-self-center ps-5 name">
                 <h1 class="text-uppercase"> Silia Cronauer</h1>
                 <p>Junior Fullstack Developer</p>
-
-
             </div>
             <div class="hero-image col-8 border border-dark border-top-0 border-bottom-0">
                 <img src="../images/IMG_2415.jpg">
@@ -217,11 +204,11 @@ Image Section
             <p class="thin-heading">Contact</p>
             <h3 class="mb-5">Get in Touch</h3>
 
-            <div class="d-flex row justify-content-between">
+            <div class="row justify-content-between">
                 <!--Form-->
                 <form class="mb-5  col-lg-5 col-md-12 col-sm-12  h-100">
                     <input type="text" placeholder="Name" class="input-fields p-2">
-                    <input type="email" name="" id="" placeholder="Email" class="input-fields p-2">
+                    <input type="email" placeholder="Email" class="input-fields p-2">
                     <textarea name="Message" id="" cols="30" rows="5" placeholder="Message" class="input-fields p-2"></textarea>
                     <button type="button" class="btn btn-outline-dark form-button text-uppercase mt-5 align-self-end mb-sm-5 mb-md-5">Send</button>
                 </form>
