changed media queries

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,9 @@ Home,  Skills, Projects, Contact
 
         <nav class="navbar navbar-expand-lg border-bottom border-dark primary-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" href="">Logo</a>
+                <a class="navbar-brand" href="#">
+                    <img src="../images/sclogo3.png" width="100" height="80">
+                </a>
                 <!--Nav-bar Toggler-->
                 <div class="menu-icon" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <input class="menu-icon__cheeckbox" type="checkbox" />
@@ -81,11 +83,11 @@ Scroll back to Top Button
 -->
 
         <div class="border-bottom border-dark hero">
-            <div class="col-3 align-self-center ps-5 name">
+            <div class="align-self-center ps-5 name">
                 <h1 class="text-uppercase"> Silia Cronauer</h1>
                 <p>Junior Fullstack Developer</p>
             </div>
-            <div class="hero-image col-8 border border-dark border-top-0 border-bottom-0">
+            <div class="hero-image border-start border-dark">
                 <img src="../images/IMG_2415.jpg">
             </div>
         </div>
@@ -97,12 +99,12 @@ Scroll back to Top Button
 -->
         <div class="about-container" id="about">
             <div class="row">
-                <div class="col-lg-5">
-                    <div class="about-img">
+                <div class="col-lg-5 align-self-center">
+                    <div class="about-img ">
                         <img src="../images/IMG_3934.JPG" alt="">
                     </div>
                 </div>
-                <div class="col-lg-7 align-self-end text-end mb-lg-5 p-5">
+                <div class="col-sm-12 col-lg-7 align-self-end text-end mb-lg-5 p-5">
                     <p class="thin-heading"> About me</p>
                     <h3 class="mb-4">Hey I'm Silia!</h3>
                     <p>I'm a sociologist and web developer. As a Web developer you have to constantly learn and I'm passionate about solving problems while building websites. Excited to grow my skills I have acquired the skills and knowledge necessary to
@@ -200,7 +202,7 @@ Image Section
     Contact
 --------------------
 -->
-        <div class="container mb-5" id="contact">
+        <div class="container" id="contact">
             <p class="thin-heading">Contact</p>
             <h3 class="mb-5">Get in Touch</h3>
 
