--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Home,  Skills, Projects, Contact
         <nav class="navbar navbar-expand-lg border-bottom border-dark primary-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/sclogo3.png" width="100" height="80">
+                    <img src="images/sclogo3.png" width="100" height="80">
                 </a>
                 <!--Nav-bar Toggler-->
                 <div class="menu-icon" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
