updated some styles for the restaurant page

--- a/Projects/Restaurant-WildFood/pages/event.html
+++ b/Projects/Restaurant-WildFood/pages/event.html
@@ -105,9 +105,9 @@ right side
 
                 <div class="col">
                     <h5>Contact</h5>
-                    <p><i class="fa-solid fa-phone-flip"></i> +43 0668 5749879</p>
-                    <p><i class="fa-solid fa-envelope"></i> wild-food-service@gmail.com</p>
-                    <p><i class="fa-solid fa-location-dot"></i> Florianigasse, 1080 Vienna</p>
+                    <p><i class="fa-solid fa-phone-flip me-2"></i> +43 0668 5749879</p>
+                    <p><i class="fa-solid fa-envelope me-2"></i> wild-food-service@gmail.com</p>
+                    <p><i class="fa-solid fa-location-dot me-2"></i> Florianigasse, 1080 Vienna</p>
 
                 </div>
                 <hr>
