--- a/Projects/Restaurant-WildFood/pages/shop.html
+++ b/Projects/Restaurant-WildFood/pages/shop.html
@@ -95,11 +95,11 @@ right side
                     <p class="small">closed</p>
                 </div>
 
-                <div class="col align-self-end">
+                <div class="col">
                     <h5>Contact</h5>
-                    <p><i class="fa-solid fa-phone-flip"></i> +43 0668 5749879</p>
-                    <p><i class="fa-solid fa-envelope"></i> wild-food-service@gmail.com</p>
-                    <p><i class="fa-solid fa-location-dot"></i> Florianigasse, 1080 Vienna</p>
+                    <p><i class="fa-solid fa-phone-flip me-2"></i> +43 0668 5749879</p>
+                    <p><i class="fa-solid fa-envelope me-2"></i> wild-food-service@gmail.com</p>
+                    <p><i class="fa-solid fa-location-dot me-2"></i> Florianigasse, 1080 Vienna</p>
 
                 </div>
                 <hr>
