--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <!-- My stylesheet -->
-    <link rel="stylesheet" href="../CSS/stlye.css">
+    <link rel="stylesheet" href="CSS/stlye.css">
     <!-- My Icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -96,7 +96,7 @@ Scroll back to Top Button
                 <a href="#contact" class="heading-font text-uppercase heading-with-border text-dark fs-4">Let's Talk</a>
             </div>
             <div class="hero-image border-start border-dark">
-                <img src="../images/IMG_2415.jpg">
+                <img src="images/IMG_2415.jpg">
             </div>
         </div>
 
@@ -221,7 +221,7 @@ Script Tags
 -->
 
     <!-- My Script -->
-    <script src="../JS/script.js "></script>
+    <script src="JS/script.js "></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3 " crossorigin="anonymous "></script>
