changed text of skills section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Home,  Skills, Projects, Contact
 ----------------------------------
 -->
 
-        <nav class="navbar navbar-expand-lg border-bottom border-dark primary-nav text-uppercase ">
+        <nav class="navbar navbar-expand-lg border-bottom border-dark text-uppercase ">
             <div class="container-fluid">
                 <a class="navbar-brand heading-font" href="#">
                     silia cronauer
@@ -91,7 +91,7 @@ Scroll back to Top Button
         <div class=" hero">
             <div class="ps-4 about-content align-self-center" id="about">
 
-                <p class="text-dark"> - sociologist with a unique perspective to building websites. I'm all about creating stunning front-end designs that reflect a company's brand and values but also eager to dive into the back-end and make sure everything works seamlessly.
+                <p class="text-dark"> & sociologist with a unique perspective to building websites. I'm all about creating stunning front-end designs that reflect a company's brand and values but also eager to dive into the back-end to make sure everything works seamlessly.
                     My passion is helping businesses shine on the world wide web and I believe an aestatic and user-friendly website is key to success. Want to work together and make your project stand out?</p>
                 <a href="#contact" class="heading-font text-uppercase heading-with-border text-dark fs-4">Let's Talk</a>
             </div>
@@ -113,17 +113,19 @@ Scroll back to Top Button
                     <div class="col px-4">
                         <h2 class="number">01</h2>
                         <h3 class="heading-font text-uppercase">Web Design</h3>
-                        <p>The Design of a Website is a reflection of your buisness in the world wide web.</p>
+                        <p>The design of a website is crucial in showcasing your business in the online world. I understand the importance of creating visually appealing and user-friendly interfaces that effectively communicate your brand and values.</p>
                     </div>
                     <div class="col px-4">
                         <h2 class="number">02</h2>
                         <h3 class="heading-font text-uppercase">Front-End</h3>
-                        <p>When it comes to style a website the fun begins. I'm passionate about the look of the user's interface and will find solutions for perfection.</p>
+                        <p>Front-end development is where the magic happens. I'm passionate about translating design concepts into pixel-perfect and engaging websites. From HTML, CSS, and JavaScript, I strive to deliver seamless user experiences and bring
+                            your ideas to life.</p>
                     </div>
                     <div class="col px-4">
                         <h2 class="number">03</h2>
                         <h3 class="heading-font text-uppercase">Back-End</h3>
-                        <p>From planning the Database to actually build it and finally work with it. Wether in framworks such as Symfony or in just plain PHP.</p>
+                        <p>Building the backbone of a website is just as important as its appearance. I have experience in both planning and implementing robust back-end solutions. Whether it's designing databases or working with frameworks like Symfony
+                            or plain PHP, I ensure the smooth functioning and performance of your web applications.</p>
                     </div>
                 </div>
             </div>
@@ -141,9 +143,7 @@ Image Section
     Projects 
 ---------------------
 -->
-
-
-        <!-- Project Section -->
+        <!-- Project Header -->
         <div class="container my-5" id="projects">
             <h1 class="mb-5 heading-font heading-with-border text-uppercase text-center">Recent Projects</h1>
 
@@ -173,25 +173,25 @@ Image Section
 
             <div class="mb-5 contact-icons">
                 <span class="contact-icon-box me-2">
-        <a href="https://www.instagram.com/siliac/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-    </span>
+                    <a href="https://www.instagram.com/siliac/" target="_blank">
+                         <i class="fa-brands fa-instagram"></i>
+                    </a>
+                 </span>
                 <span class="contact-icon-box me-2">
-        <a href="https://www.linkedin.com/in/silia-cronauer/" target="_blank">
-            <i class="fa-brands fa-linkedin-in"></i>
-        </a>
-    </span>
+                    <a href="https://www.linkedin.com/in/silia-cronauer/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                 </span>
                 <span class="contact-icon-box me-2">
-        <a href="https://github.com/Silia-Maria"" target="_blank">
-            <i class="fa-brands fa-github"></i>
-        </a>
-    </span>
+                    <a href="https://github.com/Silia-Maria"" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </span>
 
                 <span class="contact-icon-box numberShow" id="phone-link">
-            <i class="fa-solid fa-phone-flip "></i>
-            <a class="phone-number" href="tel:+43 660 2252867" target="_blank">+43 (0) 6602252867</a>
-        </span>
+                    <i class="fa-solid fa-phone-flip "></i>
+                    <a class="phone-number" href="tel:+43 660 2252867" target="_blank">+43 (0) 6602252867</a>
+                 </span>
 
             </div>
         </div>
