modified code for foodblog

--- a/Projects/Foodblog/about.html
+++ b/Projects/Foodblog/about.html
@@ -41,20 +41,26 @@
 
     <!-- Main Content -->
 
-    <div class="flex-about">
+    <div class="about">
+
+        <div class="about-image">
+            <img src="images/about-me.jpg" alt="">
+            <div>
+                <h1>Hey I'm Tessa!</h1>
+                <h3> I'm an extroverted Nutritiom-expert and Chef. </h3>
+                <h3>Food means more to me than just satisfying the hunger.</h3>
+            </div>
+        </div>
         <div class="text">
-
-            <h1>Hey I'm Tessa!</h1>
-            <p>I'm an extroverted Nutritiom-expert and Chef. Food means more to me than just satisfying the hunger. I traveled the world to taste all flavours someone could ever imagine and learned about new recipes from different cultures all over the world.
-                Those experiences inspire me to experiment with, what some people would call <em>weird</em> combinations of flavors - but after i perfectionized a new recipe, the flavours combining in your mouth will create an amazing taste and you will
-                absolutely <strong>love</strong> it, i promise!</p>
-
+            <p>
+                I traveled the world to taste all flavours someone could ever imagine and learned about new recipes from different cultures. Those experiences inspire me to experiment with, what some people would call <em>weird</em> combinations of flavors
+                - but after i perfectionized a new recipe, the flavours combining in your mouth will create an amazing taste and you will absolutely <strong>love</strong> it, i promise!</p>
             <p>Because i want to share my knowledge and creations with you, i don't only offer my recipes on this Food blog for you to cook at home but also private costumized Cooking Classes to take you to explore a new <em>World of Taste</em>. Good food
                 turns life into an adventure - are you ready to start the journey of tasting?
             </p>
         </div>
 
-        <div class="about-image"></div>
+
     </div>
 
     <section class="image-fixed"></section>
