--- a/Projects/flower-shop/index.html
+++ b/Projects/flower-shop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>FlowerShop</title>
-    <base href="/Portfolio/Projects/flower-shop/">
+    <base href="/Projects/flower-shop/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS only -->
