cleaned code + changed portfolio hover/click

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Scroll back to Top Button
             <div class="ps-4 about-content align-self-center" id="about">
 
                 <p class="text-dark"> & sociologist with a unique perspective to building websites. I'm all about creating stunning front-end designs that reflect a company's brand and values but also eager to dive into the back-end to make sure everything works seamlessly.
-                    My passion is helping businesses shine on the world wide web and I believe an aestatic and user-friendly website is key to success. Want to work together and make your project stand out?</p>
+                    My passion is helping businesses shine on the world wide web and I believe an aesthetic and user-friendly website is key to success. Want to work together and make your project stand out?</p>
                 <a href="#contact" class="heading-font text-uppercase heading-with-border text-dark fs-4">Let's Talk</a>
             </div>
             <div class="hero-image border-start border-dark">
