modified code for car-rental

--- a/Projects/car-rental/index.html
+++ b/Projects/car-rental/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>CarRental</title>
-    <base href="/Projects/car-rental/">
+    <base href="/Projects/car-rental">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS only -->
@@ -659,7 +659,7 @@
 
     <script src="runtime.68c2ddd3b365bd80.js" type="module"></script>
     <script src="polyfills.533d7d9ce13d75e1.js" type="module"></script>
-    <script src="main.b96969d3b3fe5ab8.js" type="module"></script>
+    <script src="main.baee6a8c43277530.js" type="module"></script>
 
 </body>
 
