--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ Scroll back to Top Button
     Hero & About
 ---------------    
 -->
-        <h1 class="text-uppercase heading-font text-end hero-heading border-bottom border-dark mb-0"> * Junior <br> Web Developer</h1>
+        <h1 id="about" class="text-uppercase heading-font text-end hero-heading border-bottom border-dark mb-0"> * Junior <br> Web Developer</h1>
         <div class=" hero">
-            <div class="ps-4 about-content align-self-center" id="about">
+            <div class="ps-5 about-content align-self-center">
 
                 <p class="text-dark"> & sociologist with a unique perspective to building websites. I'm all about creating stunning front-end designs that reflect a company's brand and values but also eager to dive into the back-end to make sure everything works seamlessly.
                     My passion is helping businesses shine on the world wide web and I believe an aesthetic and user-friendly website is key to success. Want to work together and make your project stand out?</p>
@@ -124,8 +124,7 @@ Scroll back to Top Button
                     <div class="col px-4">
                         <h2 class="number">03</h2>
                         <h3 class="heading-font text-uppercase">Back-End</h3>
-                        <p>Building the backbone of a website is just as important as its appearance. I have experience in both planning and implementing robust back-end solutions. Whether it's designing databases or working with frameworks like Symfony
-                            or plain PHP, I ensure the smooth functioning and performance of your web applications.</p>
+                        <p>Building the backbone of a website is just as important as its appearance. With expertise in database design and working with frameworks like Symfony or plain PHP, I create robust back-end solutions for your web applications.</p>
                     </div>
                 </div>
             </div>
@@ -144,8 +143,8 @@ Image Section
 ---------------------
 -->
         <!-- Project Header -->
-        <div class="container my-5" id="projects">
-            <h1 class="mb-5 heading-font heading-with-border text-uppercase text-center">Recent Projects</h1>
+        <div class="container" id="projects">
+            <h1 class="my-5 heading-font heading-with-border text-uppercase text-center">Recent Projects</h1>
 
             <!-- Portfolio Cards (loop in JS)-->
             <div id="portfolio" class="row row-cols-1 row-cols-lg-3 g-4">
