--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Scroll back to Top Button
             </div>
             <div class="hero-image border-start border-dark">
                 <img src="images/IMG_2415.jpg">
+                <p>jpg</p>
             </div>
         </div>
 
